First_Step/data/45/274/grade_comments.txt
-The compilation or preparation of execution has failed
Executable.java:16: error: '.class' expected
		sortBubble(int[] tab);
		                 ^
Executable.java:16: error: ';' expected
		sortBubble(int[] tab);
		                    ^
2 errors
Not compiled
